--- a/dueler.html
+++ b/dueler.html
@@ -123,26 +123,26 @@
 
 </div>
 <div id="divbutton4">
-    <a href = "/account/register/{{.Refback}}" style=" text-decoration: none;">
+
     <div id="divbutton2100">
+            <a id="textbuttonregister" class="texted centered">{{.REGISTER}}</a>
+      <a href = "/account/register/{{.Refback}}" style=" text-decoration: none;">
         <img id="buttoncontact" src="/resources/imgindex/buttonup.png"></img>
-        <a id="textbuttonregister" class="texted centered">{{.REGISTER}}</a>
+      </a>
+        
+
     </div>
-    </a>
+
 </div>
 <div id="divbutton5">
-    <a href="http://challenger.userforum.ru" style=" text-decoration: none;">
         <div id="divbutton2100">
-            <a id="textbuttonforum" class="texted centered">{{.FORUM}}</a>
+            <a id="textbuttonforum" href="http://challenger.userforum.ru" style=" text-decoration: none;" class="texted centered" target="_blank">{{.FORUM}}</a>
         </div>
-    </a>
 </div>
 <div id="divbutton6">
-    <a href="https://www.youtube.com/watch?v=nMO9b67ShoA" style=" text-decoration: none;" target="_blank">
         <div id="divbutton2100">
-            <a id="textbuttonhowitworks" class="texted centered">{{.HOWITWORKS}}</a>
+            <a id="textbuttonhowitworks" class="texted centered" href="https://www.youtube.com/watch?v=nMO9b67ShoA" style=" text-decoration: none;" target="_blank">{{.HOWITWORKS}}</a>
         </div>
-    </a>
 </div>
 <img id="logonamepic" src="/resources/imgindex/dueler.png"></img>
 <div id="liderboarddiv">
